Requisition Modal Close done

--- a/DhaliProcurement/Views/MaterialRequisition/Edit.cshtml
+++ b/DhaliProcurement/Views/MaterialRequisition/Edit.cshtml
@@ -447,7 +447,7 @@
                         <div class="modal-footer">
                             <div class="col-md-offset-2 col-md-10">
                                 <button type="submit" class="btn btn-primary" id="ModalDetailSave">Save</button>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="ModalClose">Close</button>
                             </div>
                         </div>
                     </div>
@@ -735,7 +735,6 @@
 
 
 
-
     $("#ModalItemName").change(function () {
         var ItemId = $('#ModalItemName option:selected').val();
         //alert(ItemId);
@@ -881,6 +880,15 @@
 
             $('#detailForm').modal('hide');
         }
+    });
+
+    $('#ModalClose').click(function () {
+        $('#ModalItemName_Error').hide();
+        $('#ModalQty_Error').hide();
+        $('#ModalCurrentStock_Error').hide();
+        $('#ModalBrand_Error').hide();
+        $('#ModalSize_Error').hide();
+        $('#ModalRemarks_Error').hide();
     });
 
 
