material requisition report

--- a/DhaliProcurement/Views/PurchaseOrders/Create.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Create.cshtml
@@ -734,7 +734,7 @@
         var SiteId = $('#SiteId').val();
         $.ajax({
             type: "post",
-            url: "/PurchaseOrders/GetSiteLocation",
+            url: "/PurchaseOrders/cc",
             data: { SiteId },
             datatype: "json",
             traditional: true,
